# auto_drive_ros2_ws

./: .gitmodules  test.csv
src/global_path/: CMakeLists.txt
src/global_path/launch/: global_path_test.launch.py
src/global_path/params/: params.yaml
src/global_path/src/: global_path_node.cpp  global_planning.cpp
src/local_path/include/local_path/: local_planner.hpp  local_planning.hpp  path_publisher.hpp  spline.hpp  util_functions.hpp
src/local_path/include/util/: pcp.hpp
src/local_path/src/: corner_detect_node.cpp  local_path_node.cpp  local_planner.cpp  local_planning.cpp  path_publisher.cpp  static_local_planner_node.cpp  util_functions.cpp
src/local_path/src/lib/: CMakeLists.txt  spline.cpp  spline_py_module.cpp
src/local_path/src/lib/include/lib/: spline.hpp
src/local_path/src/util/: pcp.cpp
src/mapping/: CMakeLists.txt  package.xml
src/mapping/config/: slam_mapping.rviz
src/mapping/launch/: mapping.launch.py  slam_mapping.launch.py
src/mapping/models/LidarRobo/: model.sdf
src/mapping/params/: slam_params.yaml
src/octmap_publisher/launch/: map_server.launch.py
src/path_creator/: README.md  main_window.py  package.xml  path_creator_widget.py  path_publisher.py  setup.py  spline_interpolation_widget.py  trapezoidal_velocity_widget.py
src/path_creator/path_creator/: main_window.py
src/path_creator/resource/: path_creator
src/path_tracking/: CMakeLists.txt  package.xml
src/path_tracking/config/: path_tracking_test.rviz
src/path_tracking/include/path_tracking/: common.hpp  pure_pursuit.hpp  pure_pursuit_logic.hpp  visibility_control.h
src/path_tracking/include/path_tracking/pure_pursuit/: pure_pursuit.hpp  pure_pursuit_logic.hpp
src/path_tracking/include/path_tracking/util/: menger_curvature.hpp
src/path_tracking/launch/: path_tracking_sim.launch.py
src/path_tracking/src/: path_publisher_node.cpp  path_server_node.cpp  pure_pursuit.cpp  pure_pursuit.py  pure_pursuit_logic.cpp  pure_pursuit_node.cpp
src/path_tracking/src/pure_pursuit/: pure_pursuit.cpp  pure_pursuit_logic.cpp  pure_pursuit_node.cpp
src/path_tracking/src/util/: menger_curvature.cpp
